--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,6 +47,9 @@ codebook = "io.papermc.codebook:codebook:1.0.4"
 
 restamp = "io.papermc.restamp:restamp:1.0.0"
 
+# test
+mockk = "io.mockk:mockk:1.13.8"
+
 # Gradle
 gradle-licenser = "net.kyori:indra-licenser-spotless:3.1.3"
 gradle-spotless = "com.diffplug.spotless:spotless-plugin-gradle:6.23.1"
