--- a/paperweight-core/src/test/resources/functional_test/build.gradle
+++ b/paperweight-core/src/test/resources/functional_test/build.gradle
@@ -13,16 +13,34 @@ repositories {
     mavenCentral()
 }
 
+def fake = Boolean.getBoolean("fake")
+
 dependencies {
-    mache files('mache.zip') // use fake mache for testing
+    if (fake) {
+        mache files('mache.zip') // use fake mache for testing
+    } else {
+        mache 'io.papermc:mache:1.20.4+build.1'
+    }
 }
 
 paperweight {
     softSpoon = true
 
-    // use fake mojang data for testing
-    minecraftVersion = 'fake'
-    minecraftManifestUrl = 'file://project/fake_mojang/version_manifest.json'
+    if (fake) {
+        // use fake mojang data for testing
+        minecraftVersion = 'fake'
+        minecraftManifestUrl = 'file://project/fake_mojang/version_manifest.json'
+
+        paper {
+            sourcePatchDir.set(file('fake-patches/sources'))
+            resourcePatchDir.set(file('fake-patches/resources'))
+            featurePatchDir.set(file('fake-patches/feature'))
+
+            additionalAts.set(file('build-data/fake.at'))
+        }
+    } else {
+        minecraftVersion = '1.20.4'
+    }
 
     serverProject = project(':test-server')
 }
