--- a/.github/workflows/deploy-snapshot.yml
+++ b/.github/workflows/deploy-snapshot.yml
@@ -1,7 +1,7 @@
 name: Deploy Snapshot
 on:
   push:
-    branches: [ 'main' ]
+    branches: [ 'main', 'softspoon-v2' ]
     paths-ignore:
       - 'license/*'
       - 'readme.md'
